--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,68 @@
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f8f8f8;
-  padding: 10px;
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-nav h3 {
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
   margin: 0;
-}
-
-nav div button {
-  margin: 0 10px;
-}
-
-.product-grid {
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  padding: 20px;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
-.product-card {
-  border: 1px solid #ccc;
-  padding: 20px;
-  width: 200px;
-  text-align: center;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
-.product-card img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-}
-
-.product-card button {
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  padding: 10px;
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
   cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
-.product-card button:hover {
-  background-color: #45a049;
-}
-
-
-
-.product-card:hover {
-  transform: scale(1.05);
-}
-
-.product-card img {
-  width: auto;
-}
-
-.cart-dropdown {
-  position: absolute;
-  top: 50px; 
-  right: 20px;
-  background-color: white;
-  border: 1px solid #ccc;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  z-index: 1000;
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
