--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,7 +5,7 @@
   .hero-section {
     text-align: center;
     padding: 40px 20px;
-    background-color: #f8f9fa;
+    background-color: #62b1ff;
     margin-bottom: 40px;
     border-radius: 8px;
   }
